# c-render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  resourcesmanager.c  resourcesmanager.h  shader.c  shader.h  shaderprogram.c  shaderprogram.h  window.c  window.h
